# FlightSimulator

./: CMakeLists.txt
assets/shaders/: basic_shader.frag  basic_shader.vert  minimap_shader.frag  minimap_shader.vert  terrain.frag  terrain.vert
src/: Aircraft.cpp  Aircraft.h  Airfoil.cpp  Airfoil.h  Camera.cpp  Camera.h  Engine.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Map.cpp  Map.h  MiniMap.cpp  MiniMap.h  OpenGLUtils.h  PhysicsConfig.cpp  PhysicsConfig.h  PhysicsEngine.cpp  PhysicsEngine.h  RigidBody.cpp  RigidBody.h  Shader.cpp  Shader.h  Terrain.cpp  Terrain.h  TerrainBlock.h  Texture.cpp  Texture.h  Wing.cpp  Wing.h  main.cpp
